# oqs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Catch2.runsettings  README.md  appveyor.yml  create_repo.bat  lgtm.yml  oqs.ini
app/: CMakeLists.txt
app/src/: main.cpp
app/test/: CMakeLists.txt
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
example/: CMakeLists.txt  main.cpp
example/test/: CMakeLists.txt
include/oqs/infrastructure/save/: dense.h
include/oqs/system/: dissipative.h  experiment.h  hamiltonian.h
include/oqs/system/hamiltonian/: hamiltonian.h
include/oqs/system/hamiltonian/generators/: mock.h
include/oqs/trajectories/: experiment.h
include/oqs/trajectories/propagation/: step.h
include/trajectories/propagation/: step.h
lib/: CMakeLists.txt
lib/include/: calc.h  calc_step.h  logger.h
lib/include/infrastructure/save/: dense.h
lib/include/trajectories/: step.h
lib/include/trajectories/propagation/: step.h
lib/src/: calc.cpp  calc_step.cpp  logger.cpp
lib/src/infrastructure/save/: dense.cpp
lib/src/trajectories/: step.cpp
lib/src/trajectories/propagation/: step.cpp
lib/test/: CMakeLists.txt  calc_test.cpp  main.cpp
lib/test/infrastructure/save/: dense_test.cpp
lib/test/src/: calc_step_test.cpp  calc_test.cpp  logger_test.cpp
lib/test/trajectories/: step_test.cpp
test/: CMakeLists.txt  main.cpp
test/infrastructure/save/: dense_test.cpp
test/system/: dissipative_test.cpp  experiment_test.cpp  hamiltonian_test.cpp
test/system/hamiltonian/generators/: mock_test.cpp
test/trajectories/: experiment_test.cpp
test/trajectories/propagation/: step_test.cpp
